Introduced a bug on mobile expedition hero banner images

--- a/_sass/_expeditions.scss
+++ b/_sass/_expeditions.scss
@@ -428,6 +428,7 @@ body.expeditions {
         position: relative;
         left: 50%;
         transform: translateX(-50%);
+        width: auto;
     }
 
 
